Fixed video alignment in post page.

--- a/content/themes/taller/assets/sass/partials/components/_post.sass
+++ b/content/themes/taller/assets/sass/partials/components/_post.sass
@@ -213,6 +213,10 @@ header.article-head
   > iframe
     @extend %expanded
     width: 100%
+    display: block
+    margin-top: 20px
+    margin-bottom: 20px
+    text-align: center
 
   img
     max-width: 100%
